# multi

./: .gitignore  Cargo.toml
example/: ALL_QUESTIONS.tex  CORRECT_ANSWERS.csv  TEST_PAPERS.tex  _correctAnswers.json  _latexPreamble.tex  _testPapers.json  examProfile.json  given_answers.csv  markProfile.json  questions.json
rofi-interface/: multi-rofi.fish
src/: command.rs  create.rs  latex.rs  lib.rs  lib.rs~  main.rs  main.rs~  mark.rs  setup.rs  setup.rs~  utilities.rs
