[package]
name = "multi"
version = "0.1.0"
authors = ["Theo Garefalakis <tgaref@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.1", features = ["derive"]}
serde_json = "1.0"
rand = "0.7.3"
csv = "1.1.3"
clap = "2.33.1"
snafu = "0.6.8"